--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,24 +1,56 @@
-- name: Create and populate .Renviron file
-  env:
-    AWS_HOST: ${{ secrets.AWS_HOST }}
-    AWS_PORT: ${{ secrets.AWS_PORT }}
-    AWS_PW: ${{ secrets.AWS_PW }}
-    AWS_USER: ${{ secrets.AWS_USER }}
-    DBNAME: ${{ secrets.DBNAME }}
-  run: |
-    touch .Renviron
-    echo aws_host="$AWS_HOST" >> .Renviron
-    echo aws_port="$AWS_PORT" >> .Renviron
-    echo aws_pw="$AWS_PW" >> .Renviron
-    echo aws_user="$AWS_USER" >> .Renviron
-    echo dbname="$DBNAME" >> .Renviron
-    echo env >> .Renviron
-    echo "cat .Renviron"
-    cat .Renviron
-    
-    echo "ls -a ."
-    ls -a .
-    
-    echo "ls -a ${{ github.workspace }}"
-    ls -a ${{ github.workspace }}
-  shell: bash
+# This is a basic workflow to help you get started with Actions
+
+name: CI
+
+# Controls when the workflow will run
+on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+env:
+  AWS_HOST: ${{ secrets.AWS_HOST }}
+  AWS_PORT: ${{ secrets.AWS_PORT }}
+  AWS_PW: ${{ secrets.AWS_PW }}
+  AWS_USER: ${{ secrets.AWS_USER }}
+  DBNAME: ${{ secrets.DBNAME }}
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          touch .Renviron
+          echo aws_host="$AWS_HOST" >> .Renviron
+          echo aws_port="$AWS_PORT" >> .Renviron
+          echo aws_pw="$AWS_PW" >> .Renviron
+          echo aws_user="$AWS_USER" >> .Renviron
+          echo dbname="$DBNAME" >> .Renviron
+          echo env >> .Renviron
+          echo "cat .Renviron"
+          cat .Renviron
+
+          echo "ls -a ."
+          ls -a .
+
+          echo "ls -a ${{ github.workspace }}"
+          ls -a ${{ github.workspace }}
+        shell: bash
