--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,11 +13,15 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 env:
-  AWS_HOST: hello
-  AWS_PORT: world
-  AWS_PW: ${{ secrets.AWS_PW }}
-  AWS_USER: ${{ secrets.AWS_USER }}
-  DBNAME: ${{ secrets.DBNAME }}
+  app_name: sample-api
+  GOPRIVATE: developer.zopsmart.com/go/gofr
+  project_name: sample-service
+  cluster_name: sample
+  DB_NAME: sample
+  DB_DIALECT: mysql
+  DB_USER: root
+  TRACER_URL: "https://tempo.observability-dev.gcpgap.zopsmart.com"
+  TRACER_EXPORTER: "zipkin"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -38,15 +42,18 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          touch .Renviron
-          echo aws_host="$AWS_HOST" >> .Renviron
-          echo aws_port="$AWS_PORT" >> .Renviron
-          echo aws_pw="$AWS_PW" >> .Renviron
-          echo aws_user="$AWS_USER" >> .Renviron
-          echo dbname="$DBNAME" >> .Renviron
-          echo $"env" >> .Renviron
-          echo "cat .Renviron"
-          cat .Renviron
+          touch gcp-values.yaml
+          echo app_name="$app_name" >> gcp-values.yaml
+          echo cluster_name="$cluster_name" >> gcp-values.yaml
+          echo project_name="$project_name">> gcp-values.yaml
+          echo DB_NAME="$DB_NAME" >> gcp-values.yaml
+          echo DB_DIALECT="$DB_DIALECT" >> gcp-values.yaml
+          echo DB_USER="$DB_USER" >> gcp-values.yaml
+          echo TRACER_URL="$TRACER_URL">> gcp-values.yaml
+          echo TRACER_EXPORTER="$TRACER_EXPORTER">> gcp-values.yaml
+          echo "$env" >> gcp-values.yaml
+          echo "cat gcp-values.yaml"
+          cat gcp-values.yaml
 
           echo "ls -a ."
           ls -a .
