--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,7 +40,6 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
-      # Runs a set of commands using the runners shell
      
 
       
@@ -48,8 +47,9 @@ jobs:
       - name: Run a multi-line script
         run: |
           touch gcp-values.yaml
-          touch gcp-values1.yaml
           echo app_name="$app_name" >> gcp-values.yaml
+          echo app_name="$env.app_name" >> gcp-values.yaml
+
           echo cluster_name="$cluster_name" >> gcp-values.yaml
           echo project_name="$project_name">> gcp-values.yaml
           echo DB_NAME="$DB_NAME" >> gcp-values.yaml
@@ -70,6 +70,4 @@ jobs:
           ls -a ${{ github.workspace }}
         shell: bash
         
-      - name: Run a env file
-        run: 
-          echo env >> gcp-values1.yaml
+     
