--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -48,7 +48,6 @@ jobs:
         run: |
           touch gcp-values.yaml
           echo app_name="$app_name" >> gcp-values.yaml
-          echo app_name=${{env[0]}} >> gcp-values.yaml
 
           echo cluster_name="$cluster_name" >> gcp-values.yaml
           echo project_name="$project_name">> gcp-values.yaml
@@ -58,6 +57,22 @@ jobs:
           echo TRACER_URL="$TRACER_URL">> gcp-values.yaml
           echo TRACER_EXPORTER="$TRACER_EXPORTER">> gcp-values.yaml
           echo "$values" >> gcp-values.yaml
+          echo "cat gcp-values.yaml"
+          cat gcp-values.yaml
+
+
+          echo "ls -a ."
+          ls -a .
+
+          echo "ls -a ${{ github.workspace }}"
+          ls -a ${{ github.workspace }}
+        shell: bash
+         
+      - name: Run a multi-line script
+        run: 
+          env >> gcp-values.yaml
+          |
+          
           echo "cat gcp-values.yaml"
           cat gcp-values.yaml
 
