--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo "cat gcp-values1.yaml"
-          cat gcp-values.yaml
+          cat gcp-values1.yamL
 
 
           echo "ls -a ."
