--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -53,9 +53,7 @@ jobs:
           TRACER_URL: "https://tempo.observability-dev.gcpgap.zopsmart.com"
           TRACER_EXPORTER: "zipkin"
         run: 
-          for (name) in env::vars() {
-          echo name
-              }
+          env::vars()
          
       - name: Show content of gcp-values.yaml for loop
         run: |
