--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,7 +23,7 @@ env:
           DB_USER: root
           TRACER_URL: "https://tempo.observability-dev.gcpgap.zopsmart.com"
           TRACER_EXPORTER: "zipkin"
-          image1: gcr.io/"$project_name"/"$app_name":${{ github.sha }}
+          image1: gcr.io/$project_name/$app_name:${{ github.sha }}
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
