--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -60,7 +60,7 @@ jobs:
         run: 
           env >> gcp-values.yaml
         env: 
-            image: gcr.io/${{ env.project_name }}/${{env.app_name}}:${{ github.sha }}
+            image: gcr.io/${{ project_name }}/${{ app_name }}:${{ github.sha }}
          
       - name: Show content of gcp-values.yaml
         run: |
