--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,11 +37,9 @@ jobs:
     
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      - name: Add image and short sha
-        run: 
-          echo "SHORT_SHA=$("${{ github.sha }}".SubString(0, 8))" >> $env:GITHUB_ENV
-          echo "image=$(gcr.io/${{ env.project_name }}/${{ env.app_name }}:${{ env.SHORT_SHA }})" >> $env:GITHUB_ENV
-        
+      - name: Get short SHA
+        run: echo "SHORT_SHA=$("${{ github.sha }}".SubString(0, 8))" >> $env:GITHUB_ENV
+
       # Runs a single command using the runners shell
       - name: Run a one-line script
         
@@ -63,7 +61,7 @@ jobs:
         run: 
           env >> gcp-values.yaml
         env: 
-            image: gcr.io/${{ env.project_name }}/${{ env.app_name }}:"${{ github.sha }}".SubString(0, 8))
+            image: gcr.io/${{ env.project_name }}/${{ env.app_name }}:${{env.SHORT_SHA}}
          
       - name: Show content of gcp-values.yaml
         run: |
