--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,7 +38,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       - name: Get short SHA
-        run: echo "SHORT_SHA=$("${{ github.sha }}".SubString(0, 8))" >> $env:GITHUB_ENV
+        run: echo SHORT_SHA=$("${{ github.sha }}".SubString(0, 8)) >> $env:GITHUB_ENV
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
