--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,7 +45,8 @@ jobs:
 
      
 
-      
+      - name: Add SHORT_SHA env property with commit short sha
+        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
       
       - name: Create gcp-values.yaml file
         run: |
@@ -59,7 +60,7 @@ jobs:
         run: 
           env >> gcp-values.yaml
         env: 
-            image: gcr.io/${{ env.project_name }}/${{ env.app_name }}:${{github.sha::7}}        
+            image: gcr.io/${{ env.project_name }}/${{ env.app_name }}:${{ env.SHORT_SHA }}        
       - name: Show content of gcp-values.yaml
         run: |
           echo "cat gcp-values.yaml"
