--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Add SHORT_SHA env property with commit short sha
         run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
       - name: Add imageenv property 
-        run: echo "image=`gcr.io/${{ env.project_name }}/${{ env.app_name }}:${{ env.SHORT_SHA }} `" >> $GITHUB_ENV
+        run: echo "image=`echo gcr.io/${{ env.project_name }}/${{ env.app_name }}:${{ env.SHORT_SHA }} `" >> $GITHUB_ENV
       
       - name: Create gcp-values.yaml file
         run: |
