--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -53,6 +53,7 @@ jobs:
       
       - name: Create gcp-values.yaml file
         run: |
+          echo {{env.image}}
           touch gcp-values.yaml
         shell: bash
         
