--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -42,9 +42,11 @@ jobs:
       - uses: actions/checkout@v3
      
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Loop over env
         
-        run: echo Hello, world!
+        run: |
+                  env_vars=( ${{ fromJSON(env) }} )
+                  echo env_vars
 
      
 
