--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,11 +43,9 @@ jobs:
      
       # Runs a single command using the runners shell
       - name: Loop over env
-        
-        run: |
-            env_vars=( ${{ fromJSON(env) }} )
+        run: env_vars=( ${{ fromJSON(env) }} )
             echo env_vars
-        shell: bash
+      
 
      
 
