--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,8 +27,9 @@ env:
             maxMemory: "1Gi"
             maxCPU: "1.5"
             cs: ${{github.sha}}
-            COMMIT_SHA: ${GITHUB_SHA} | cut -c1-12
-
+            COMMIT_SHA: "${GITHUB_SHA} | cut -c1-12"
+            
+            
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
