--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,7 +26,7 @@ env:
             minMemory: "512Mi"
             maxMemory: "1Gi"
             maxCPU: "1.5"
-            cs: ${{github.sha}}
+            cs: ${{github.sha::12}}
             COMMIT_SHA: ${GITHUB_SHA::12}
         
             
@@ -59,7 +59,7 @@ jobs:
       - name: Create gcp-values.yaml file
         run: |
           echo gcr.io/${{ env.project_name}}/${{env.name }}:${{ env.COMMIT_SHA }} 
-          echo "image=`echo gcr.io/${{ env.project_name }}/${{ env.name }}:${{ env.COMMIT_SHA }}`"
+          echo `gcr.io/${{ env.project_name }}/${{ env.name }}:${{ env.COMMIT_SHA }}`
           touch gcp-values.yaml
         shell: bash
         
