--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -69,7 +69,9 @@ jobs:
       - name: Store variables in gcp-values.yaml
         run: 
           env >> gcp-values.yaml
-             
+      - name: replace
+        run: |
+          sed -i 's/=/: /' gcp-values.yaml
       - name: Show content of gcp-values.yaml
         run: |
           echo "cat gcp-values.yaml"
