--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -80,7 +80,7 @@ jobs:
       - name: replace
         run: |
           sed -i 's/=/: /' gcp-values.yaml
-          sed -i 's/***//' gcp-values.yaml
+          sed -i 's/***/hello: world/' gcp-values.yaml
           
       - name: Show content of gcp-values.yaml
         run: |
