--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -73,8 +73,8 @@ jobs:
         run: |
           echo "cat gcp-values.yaml"
           echo env: >> gcp-values.yaml
-          echo "  TRACER_URL=${{env.TRACER_URL}}" >> gcp-values.yaml
-          echo "  TRACER_EXPORTER=${{env.TRACER_EXPORTER}}" >> gcp-values.yaml
+          echo "  TRACER_URL=${{env.env.TRACER_URL}}" >> gcp-values.yaml
+          echo "  TRACER_EXPORTER=${{env.env.TRACER_EXPORTER}}" >> gcp-values.yaml
 
           cat gcp-values.yaml
           echo "ls -a ."
