--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -53,7 +53,7 @@ jobs:
       
 
       - name: Add image env property with commit sha tag
-        run: echo "image=gcr.io/platform-379911/sample-api:591500fd72f744daefebadd59223cdc2fb9fbbd6" >> $GITHUB_ENV
+        run: echo "image=`echo gcr.io/${{ env.project_name }}/${{ env.app_name }}:${{ github.sha }}`" >> $GITHUB_ENV
 
       
       - name: Create gcp-values.yaml file
