--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -94,6 +94,20 @@ jobs:
           echo "ls -a ."
           ls -a .
         shell: bash
+        
+      - id: imageOut
+        run: echo "image=`echo gcr.io/${{ env.project_name }}/${{ env.app_name }}:${{ github.sha }}`" >> "$GITHUB_OUTPUT"
+    outputs:
+      output1: ${{ steps.imageOut.outputs.image }}
+  docker:
+    runs-on:  ubuntu-latest
+    needs: build
+    steps:
+      - env:
+          OUTPUT1: ${{needs.job1.outputs.output1}}
+        run: echo "$OUTPUT1"
+   
+
       
         
      
