--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,85 +29,23 @@ env:
       
         
             
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  job1:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-  
-    
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-     
-      # Runs a single command using the runners shell
-  
-      
-
-     
-
-      
-
-      - name: Add image env property with commit sha tag
-        run: echo "image=`echo gcr.io/${{ env.project_name }}/${{ env.app_name }}:${{ github.sha }}`" >> $GITHUB_ENV
-
-      
-      - name: Create gcp-values.yaml file
-     
-        run: |
-          echo gcr.io/${{ env.project_name }}/${{ env.name }}:${{ github.sha}}
-          touch gcp-values.yaml
-        shell: bash
-        
-
-        
-      
-      - name: Store variables in gcp-values.yaml
-        run: 
-          env >> gcp-values.yaml
-      - name: Show content of gcp-values.yaml ==
-        run: |
-          echo "cat gcp-values.yaml"
-          echo env: >> gcp-values.yaml
-          echo "  TRACER_URL: $TRACER_URL" >> gcp-values.yaml
-          echo "  TRACER_EXPORTER: $TRACER_EXPORTER" >> gcp-values.yaml
-
-          cat gcp-values.yaml
-          echo "ls -a ."
-          ls -a .
-        shell: bash
-      
-      - name: replace
-        run: |
-          sed -i 's/=/: /' gcp-values.yaml
-          sed -i -e 's/\*\**/hello: world/g' gcp-values.yaml
-        shell: bash
-          
-      - name: Show content of gcp-values.yaml
-        run: |
-          echo "cat gcp-values.yaml"
-          cat gcp-values.yaml
-          echo "ls -a ."
-          ls -a .
-        shell: bash
-        
-      - id: imageOut
-        run: echo "image=docker image" >> "$GITHUB_OUTPUT"
+    # Map a step output to a job output
     outputs:
-      output1: ${{ steps.imageOut.outputs.image }}
-  docker:
-    runs-on:  ubuntu-latest
-    needs: build
+      output1: ${{ steps.step1.outputs.test }}
+      output2: ${{ steps.step2.outputs.test }}
+    steps:
+      - id: step1
+        run: echo "test=hello" >> "$GITHUB_OUTPUT"
+      - id: step2
+        run: echo "test=world" >> "$GITHUB_OUTPUT"
+  job2:
+    runs-on: ubuntu-latest
+    needs: job1
     steps:
       - env:
           OUTPUT1: ${{needs.job1.outputs.output1}}
-        run: echo "$OUTPUT1"
-   
-
-      
-        
-     
+          OUTPUT2: ${{needs.job1.outputs.output2}}
+        run: echo "$OUTPUT1 $OUTPUT2"
