--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,19 +30,19 @@ env:
         
             
 jobs:
-  job1:
+  dockerize:
     runs-on: ubuntu-latest
     # Map a step output to a job output
     outputs:
       image: ${{ steps.step1.outputs.image }}
     steps:
-      - id: step1
+      - id: output-image
         run: echo "image=`echo gcr.io/${{ env.project_name }}/${{ env.name }}:${{ github.sha }}`" >> "$GITHUB_OUTPUT"
     
   job2:
     runs-on: ubuntu-latest
-    needs: job1
+    needs: dockerize
     steps:
       - env:
-          OUTPUT1: ${{needs.job1.outputs.image}}
+          OUTPUT1: ${{needs.dockerize.output-image.image}}
         run: echo "$OUTPUT1"
