--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -47,5 +47,6 @@ jobs:
     steps:
       - env:
           OUTPUT1: ${{needs.dockerize.outputs.image}}
+        run: echo hello
       - name: hello
         run: echo "$OUTPUT1"
