--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,7 +33,7 @@ jobs:
   dockerize:
     runs-on: ubuntu-latest
     env: 
-      image: gcr.io/${{ env.project_name }}/${{ env.name }}:${{ github.sha }}
+      image: gcr.io/"$project_name"/"$name":${{ github.sha }}
     # Map a step output to a job output
     outputs:
       image: ${{ steps.output-image.outputs.image }}
