--- a/.github/workflows/blank1.yml
+++ b/.github/workflows/blank1.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: workflow-2
 
 # Controls when the workflow will run
 on:
@@ -18,10 +18,8 @@ jobs:
   # This workflow contains a single job called "build"
   job2:
     runs-on: ubuntu-latest
-    needs: dockerize
-    env:
-          image: ${{needs.dockerize.outputs.image}}
+   
     steps:
     
       - name: hello
-        run: echo ${{ env.image }}
+        run: echo calll
