--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -46,8 +46,16 @@ jobs:
   job2:
     runs-on: ubuntu-latest
     env:
-          image: ${{dockerize.outputs.image}}
+          image: ${{need.dockerize.outputs.image}}
     steps:
     
       - name: echo image
         run: echo ${{ env.image }}
+      - name: Trigger next workflow
+        if: success()
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.REPO_GHA_PAT }}
+          repository: ${{ github.repository }}
+          event-type: trigger-workflow-2
+          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
