--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,6 +45,7 @@ jobs:
     
   job2:
     runs-on: ubuntu-latest
+    needs: dockerize
     env:
           image: ${{needs.dockerize.outputs.image}}
     steps:
