--- a/.github/workflows/blank1.yml
+++ b/.github/workflows/blank1.yml
@@ -14,6 +14,9 @@ on:
  
 jobs:
   work:
+    needs: dockerize
+    env:
+          image: ${{needs.dockerize.outputs.image}}
     name: Some Workflow Work
     runs-on: ubuntu-latest
     steps:
